LIST OF CHANGES
---------------

 - GCLP compliance-related daemon changes:
     runs will not be progressed to analysis/archival unless the
     flowcell barcode is set in the npg_tracking database;
     runs are not going to be progressed if it's impossible to fetch LIMs data for a flowcell;
     both analysis and archival daemon to pass runfolder path to the
     pipeline script;
     if batch_id is available, pass it to the analysis pipeline script    
 - use appropriate driver for samplesheet generation (xml, warehouse, ml_warehouse)
 - GCLP compliance-related pipeline changes:
     get the flowcell barcode needed for
     accessing LIMs information from runfolder path/content;
     use batch id if provided by the caller;
     derive the run id from runfolder path/content
 - check for RTA run tag is dropped in the analysis daemon - all current runs are RTA
 - use alt_process flag when archiving qc runs

release 47.7
 - switch seqchksum_comparator to cram, add new test data and updated tests
   convert all cram files to bam as current version of bamcat will not read cram
   dropped one test as converting an empty bam file to cram produces a valid cram file 
 - More sanity checks: use of y split and nonconsented X and autosome split only with Homo
   sapiens reference, use of nonconsented human split only with non Homo sapiens reference.
 - always apply sanity checks (even when not running P4 based pipelines).

release 47.6
 - reenable archival of index files for CRAM/BAM files to iRODS

release 47.5
 - turn off BAM archival to iRODS

release 47.4
 - multiple TraDIS library types now in use, all assumed to start with TraDIS

release 47.3
 - P4 can process nonconsented X and autosome human split, and separate Y chromosome data
 - tidy of conditions for selection of p4 processing, and new force_p4 flag to override them

release 47.2
 - don't process phix using the p4 pipeline

release 47.1