@@ -1,6 +1,7 @@
 LIST OF CHANGES
 ---------------
 
+ - use samtools1 (rather than samtools1_1) for samtools in archival and P4 pipelines
  - GCLP compliance-related daemon changes:
      runs will not be progressed to analysis/archival unless the
      flowcell barcode is set in the npg_tracking database;
